apps/kustomize/echoserver/base/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: echoserver
spec:
  replicas: 1
  selector:
    matchLabels:
      app: echoserver
  template:
    metadata:
      labels:
        app: echoserver
    spec:
      containers:
        - env:
            - name: PORT
              value: '8080'
          image: 'ealen/echo-server:latest'
          name: echoserver
          ports:
            - containerPort: 8080
              protocol: TCP
          resources:
            limits:
              cpu: 100m
              memory: 32Mi
            requests:
              cpu: 1m
              memory: 16Mi
