apps/kustomize/echoserver/base/route.yaml
---
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: echoserver
spec:
  port:
    targetPort: 8080
  to:
    kind: Service
    name: echoserver
